# phpstan-zed

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml
bridge/src/: config.rs  diagnostics.rs  error.rs  lib.rs  main.rs  phpstan.rs  server.rs
bridge/tests/: lsp_e2e.rs  real_phpstan.rs
bridge/tests/fixtures/sample/src/: Bug.php  Clean.php
extension/: Cargo.toml  extension.toml  extension.wasm
extension/src/: cache.rs  lib.rs  phpstan_resolver.rs  phpstan_server.rs  settings.rs
