[package]
name = "phpstan-zed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
zed_extension_api = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
